# Cargo.toml
[package]
name = "reminder-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "reminder_cli"
path = "src/lib.rs"

[[bin]]
name = "reminder-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.0", features = ["full"] }
notify-rust = { version = "4.8", default-features = false}
humantime = "2.1"
anyhow = "1.0"
config = "0.15.6"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.137"
dotenvy = "0.15"
